--- a/package.json
+++ b/package.json
@@ -9,8 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "autoprefixer": "^10.4.20",
+    "next": "14.2.13",
+    "postcss": "^8.4.47",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.2.13"
+    "react-icons": "^5.3.0",
+    "sass": "^1.79.3",
+    "sharp": "^0.33.5",
+    "tailwindcss": "^3.4.13"
   }
 }
