--- a/package.json
+++ b/package.json
@@ -10,12 +10,13 @@
   },
   "dependencies": {
     "autoprefixer": "^10.4.20",
+    "framer-motion": "^12.6.5",
     "lucide-react": "^0.475.0",
     "next": "14.2.13",
     "postcss": "^8.4.47",
     "react": "^18",
     "react-dom": "^18",
-    "react-icons": "^5.3.0",
+    "react-icons": "^5.5.0",
     "sass": "^1.79.3",
     "sharp": "^0.33.5",
     "tailwindcss": "^3.4.13"
